--- a/style.css
+++ b/style.css
@@ -33,11 +33,13 @@ body {
 .name {
   color: rgba(255, 255, 255, 0.834);
   font-size: 72px;
+  margin-top: 10px;
   margin-bottom: 20px;
 }
 .name-bottom {
   color: rgba(0, 0, 0, 0.468);
   font-size: 32px;
+  margin-bottom: 10px;
 }
 .navigation {
   display: flex;
@@ -68,11 +70,80 @@ body {
 .navigation a:hover {
   background-color: rgba(0, 0, 0, 0.477);
 }
+.educat {
+  font-size: 42px;
+  display: inline-block;
+  display: flex;
+  justify-content: center;
+  margin-top: 100px;
+}
+
+.education {
+  display: flex;
+  align-items: flex-start;
+  margin-top: 50px;
+  font-family: sans-serif;
+  font-size: 24px;
+  gap: 30px;
+  justify-content: center;
+  height: 500px;
+}
+
+.secondary {
+  margin-left: 10px;
+
+  box-shadow: 1px 1px 10px 0;
+  border-radius: 10px;
+  height: 350px;
+  width: 350px;
+}
+
+.inter {
+  margin-left: 10px;
+  box-shadow: 1px 1px 10px 0;
+  border-radius: 10px;
+  height: 350px;
+  width: 350px;
+}
+.btech {
+  margin-left: 10px;
+  box-shadow: 1px 1px 10px 0;
+  border-radius: 10px;
+  height: 350px;
+  width: 350px;
+  margin-right: 10px;
+}
+.education li {
+  list-style: none;
+  margin-top: 10px;
+  margin-left: 20px;
+}
+.vb {
+  width: 100%;
+  height: 150px;
+  border-radius: 10px;
+}
+.sc {
+  width: 100%;
+  height: 150px;
+  border-radius: 10px;
+}
+.edu {
+  display: flex;
+  flex-direction: column;
+  /* gap: 10px; */
+}
+.vit {
+  width: 100%;
+  height: 150px;
+  border-radius: 10px;
+}
 
 @media (max-width: 600px) {
   .container {
-    height: 96vh;
+    height: 40vh;
     width: auto;
+    padding-bottom: 20px;
   }
   .name {
     font-size: 44px;
@@ -97,5 +168,28 @@ body {
   }
   .last {
     margin-right: 0;
+  }
+  .educat {
+    margin-top: 50px;
+  }
+  .education {
+    flex-direction: column;
+    gap: 30px;
+    margin-top: 400px;
+    font-size: 18px;
+    align-items: center;
+  }
+  .secondary {
+    width: 300px;
+    margin-top: 30px;
+    padding-bottom: 30px;
+  }
+  .inter {
+    padding-bottom: 30px;
+    width: 300px;
+  }
+  .btech {
+    width: 300px;
+    padding-bottom: 130px;
   }
 }
